--- a/locales/en.json
+++ b/locales/en.json
@@ -1373,5 +1373,6 @@
   "resend_confirmation_email": "Resend confirmation email",
   "your_affiliation_is_confirmed": "Your <0>__institutionName__</0> affiliation is confirmed.",
   "thank_you": "Thank you!",
-  "add_email": "Add Email"
+  "add_email": "Add Email",
+  "password_managed_externally": "Passwords are managed externally!"
 }
